<?xml version="1.0" encoding="utf-8"?>
<!--

    Geekttrss is a RSS feed reader application on the Android Platform.

    Copyright (C) 2017-2026 by Frederic-Charles Barthelery.

    This file is part of Geekttrss.

    Geekttrss is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    Geekttrss is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with Geekttrss.  If not, see <http://www.gnu.org/licenses/>.

-->
<resources>
    <string name="app_name" translatable="false">Geekttrss</string>

    <string name="path_star_mask_filled" translatable="false">M0,24 L24,24 L24,0 L0,0 Z</string>
    <string name="path_star_mask_empty" translatable="false">M0,24 L24,24 L24,24 L0,24 Z</string>
    <string name="ttrss_account">Tiny Tiny RSS</string>
    <!-- Login activity -->
    <string name="prompt_url">Tiny Tiny RSS server url</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="lbl_use_http_authentication">Use Http authentication</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_http_url">Invalid http(s) url</string>
    <string name="error_http_url_must_end_wish_slash">Url must end with /</string>
    <string name="error_incorrect_password">Incorrect password</string>

    <string name="title_article_list">Articles</string>
    <string name="sort_order">Sort order</string>
    <string name="content_desc_btn_sort_menu">Sort</string>
    <string name="sort_order_most_recent_first">Most recent first</string>
    <string name="sort_order_oldest_first">Oldest first</string>
    <string name="title_article_search">Search</string>
    <string name="label_feed_name" translatable="false">{feed_name}</string>
    <string name="label_tag" translatable="false">#{tag}</string>
    <string name="menu_item_mark_feed_as_read">Mark feed as read</string>
    <string name="menu_item_mark_category_as_read">Mark category as read</string>
    <string name="label_articles_search_no_results">No articles found for \"%1$s\"</string>
    <string name="label_articles_search_no_results_instructions">Check the spelling or try a different search term</string>

    <!-- activity article details -->
    <string name="title_article_details">Article details</string>
    <string name="title_feeds_menu">Feeds</string>

    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="drawer_btn_settings">Settings</string>

    <string name="star_article">Add to favorites</string>
    <string name="lbl_read_more">Read more</string>

    <!-- Strings related to Settings -->
    <string name="activity_settings_title">Settings</string>
    <string name="pref_title_theme">Theme</string>
    <string name="pref_title_articles_compact_list_items">Compact list</string>
    <string name="pref_summary_articles_compact_list_items">Display compact list of articles on small screens</string>
    <string name="pref_title_categorized_feed_list">Categorized feed list</string>
    <string name="pref_summary_categorized_feed_list">Group feeds by category in the navigation drawer</string>
    <string name="title_uncategorized_feed_category">Uncategorized</string>
    <string name="pref_title_in_app_browser_engine">In app browser engine</string>
    <string name="theme_system_default">Use system default</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="pref_category_user_interface">User interface</string>
    <string name="pref_category_advanced">Advanced</string>
    <string name="pref_category_about">About</string>
    <string name="pref_title_about_version">Version %1$s</string>
    <string name="pref_summary_about_version" translatable="false">%1$s-%2$s</string>
    <string name="pref_category_development">Development</string>
    <string name="pref_title_manage_features">Manage features</string>
    <string name="pref_title_oss_license">Open source licenses</string>
    <string name="pref_summary_oss_license">License details for open source software</string>

    <!-- Manage features fragment -->
    <string name="btn_install_feature">Install</string>
    <string name="btn_uninstall_feature">Uninstall</string>

    <!-- Install feature -->
    <string name="lbl_install_feature_title">Module installation</string>
    <string name="lbl_download_in_progress">Downloading</string>
    <string name="lbl_install_in_progress">Installing</string>
    <string name="lbl_failed_to_install">Installation failed</string>
    <string name="lbl_install_complete">Installation complete</string>
    <string name="lbl_other">Other state</string>

    <!-- Magazine fragment  -->
    <string name="title_magazine">Magazine</string>

    <!-- article list items -->
    <string name="mark_as_read">Mark as read</string>
    <string name="mark_as_unread">Mark as unread</string>
    <string name="feed_icon_content_description">Feed icon</string>
    <string name="open_article_in_browser">Open in browser</string>
    <plurals name="undo_set_articles_read_text">
        <item quantity="one">%d article marked as read</item>
        <item quantity="other">%d articles marked as read</item>
    </plurals>
    <string name="undo_set_articles_read_btn">Undo</string>
    <string name="author_formatted">by %1$s</string>
    <string name="fragment_articles_list_no_articles_lbl">No articles</string>
    <string name="fragment_articles_list_no_articles_and_sync_lbl">No articles.\nFirst synchronization may take a while…</string>
    <string name="btn_refresh">Refresh</string>
    <string name="label_fresh_feeds_title">Fresh articles</string>
    <string name="label_starred_feeds_title">Favorite articles</string>
    <string name="label_all_articles_feeds_title">All articles</string>

    <!-- banners -->
    <string name="banner_update_msg">A new update is available</string>
    <string name="banner_update_btn">Install</string>
    <string name="banner_dismiss_btn">Dismiss</string>
    <string name="banner_update_install_msg">Update ready to install</string>
    <string name="banner_install_btn">Restart</string>


    <!-- activity add feed -->
    <string name="activity_add_feed_title">Subscribe to feed</string>

    <!--  activity ShareToPublish   -->
    <string name="activity_share_to_publish_toolbar_title">Publishing article</string>
    <string name="activity_share_to_publish_article_title">Publish article</string>
    <string name="lbl_publishing_in_progress">Publishing in progress</string>

    <!-- Menus -->
    <string name="share_article">Share article</string>
    <string name="context_selection_toggle_unread">(Un)Read</string>
    <string name="search">Search</string>

    <!-- Api error messages -->
    <string name="error_unknown">Error: Unknown error</string>
    <string name="error_http_unauthorized">Http error: 401 unauthorized</string>
    <string name="error_http_forbidden">Http error: 403 forbidden</string>
    <string name="error_http_not_found">Http error: 404 not found</string>
    <string name="error_http_server_error">Http error: 500 server error</string>
    <string name="error_http_other_error">Error: other HTTP error (see log)</string>
    <string name="error_ssl_rejected">Error: SSL certificate rejected</string>
    <string name="error_parse_error">Error: JSON parse failed</string>
    <string name="error_io_error">Error: I/O failure (server down?)</string>
    <string name="error_other_error">Error: unknown error (see log)</string>
    <string name="error_api_disabled">Error: Please enable external API access in tt-rss Settings - Advanced</string>
    <string name="error_api_unknown">Error: unknown API error (see log)</string>
    <string name="error_api_incorrect_usage">Error: incorrect API usage</string>
    <string name="error_login_failed">Error: username or password incorrect</string>
    <string name="error_invalid_api_url">Error: invalid API URL</string>
    <string name="error_ssl_hostname_rejected">Error: SSL hostname not verified</string>
    <string name="error_api_unknown_method">Error: unknown API method</string>
    <string name="error_network_unavailable">Error: network unavailable</string>
    <string name="error_cleartext_traffic_not_allowed">Error: Cleartext (http) traffic not allowed on this version of Android</string>

    <!-- features title -->
    <string name="title_manage_feeds">Manage feeds</string>

    <!-- ArticlesListAppBar   -->
    <string name="content_desc_btn_clear">Clear</string>
    <string name="placeholder_textfield_search">Search articles</string>
</resources>
